src/main/java/com/example/auth/global/error/ErrorResponse.java
package com.example.auth.global.error;

public class ErrorResponse {
}
